MBS-10460 Fix layout bug where content column does not grow when edit column is hidden

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -85,6 +85,11 @@ $feedback-success-100: #d9f6e0;
     display: flex;
     flex: 27.5rem 2 0;
     overflow-y: auto;
+
+    // When edit column is empty/hidden, reduce flex-basis to allow content column to grow
+    &:has(.mootimetercoledit:empty) {
+      flex: 7.5rem 0 0;
+    }
   }
 }
 
